[gd_scene load_steps=11 format=3 uid="uid://d2u0fqa00o42h"]

[ext_resource type="Script" uid="uid://dbcjep2m2mpbx" path="res://gui/input_settings.gd" id="1_do8lh"]
[ext_resource type="PackedScene" uid="uid://bhswok6qbi5r5" path="res://gui/input_button.tscn" id="2_vr50r"]
[ext_resource type="FontFile" uid="uid://wqrno8lackrm" path="res://gui/kenney_mini_square.ttf" id="3_vr50r"]
[ext_resource type="Script" uid="uid://b6sul4uq7drx3" path="res://gui/volume_sliders.gd" id="4_3y1ff"]
[ext_resource type="Script" uid="uid://bnp884quc02dl" path="res://gui/ButtonWithSounds.gd" id="4_nmfku"]
[ext_resource type="PackedScene" uid="uid://dq4upsqp61b6v" path="res://gui/VolumeSlider.tscn" id="5_3l2em"]
[ext_resource type="Script" uid="uid://coy1dpx127vuy" path="res://gui/toggles.gd" id="6_rwo2v"]
[ext_resource type="Script" uid="uid://p0yutk2bj3hd" path="res://gui/to_main_menu.gd" id="7_adcec"]
[ext_resource type="Theme" uid="uid://da4noqsij73it" path="res://gui/theme.tres" id="7_theme"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vr50r"]
color = Color(0.493546, 0.493545, 0.493545, 1)

[node name="OptionsPanel" type="Control"]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back to Main Menu" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.996078, 0.984314, 0.741176, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
theme_override_font_sizes/font_size = 24
text = "Back to main menu"
script = ExtResource("7_adcec")

[node name="RemapControls" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("1_do8lh")

[node name="Heading" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls"]
layout_mode = 2

[node name="Heading title" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls/Heading"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.996078, 0.745098, 0, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
text = "Controls"
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls/Heading"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Reset to Default" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls/Heading"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.8, 0.466667, 0.133333, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
text = "Set defaults"
script = ExtResource("4_nmfku")

[node name="List of Actions" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Input Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls/List of Actions" instance=ExtResource("2_vr50r")]
layout_mode = 2

[node name="BreakLine" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/BreakLine"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_vr50r")

[node name="VolumeSliders" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_3y1ff")

[node name="Heading" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders"]
layout_mode = 2

[node name="Heading title" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders/Heading"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.996078, 0.745098, 0, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
text = "Volume "
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders/Heading"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Reset to Default" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders/Heading"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.8, 0.466667, 0.133333, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
text = "Set defaults"
script = ExtResource("4_nmfku")

[node name="Master" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders" instance=ExtResource("5_3l2em")]
layout_mode = 2
label = "master"

[node name="SFX" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders" instance=ExtResource("5_3l2em")]
layout_mode = 2
label = "SFX"
bus_name = "SFX"

[node name="Music" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders" instance=ExtResource("5_3l2em")]
layout_mode = 2
label = "Music"
bus_name = "Music"

[node name="BreakLine2" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/BreakLine2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_vr50r")

[node name="Toggles" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("6_rwo2v")

[node name="other" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.996078, 0.745098, 0, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
text = "other"
vertical_alignment = 1

[node name="ToggleRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles/ToggleRow"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="FullscreenToggle" type="CheckBox" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles/ToggleRow/MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_vr50r")
text = "fullscreen"
script = ExtResource("4_nmfku")

[node name="other2" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.996078, 0.745098, 0, 1)
theme_override_fonts/font = ExtResource("3_vr50r")
text = "Character gender"
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles"]
layout_mode = 2
theme = ExtResource("7_theme")
selected = 1
item_count = 2
popup/item_0/text = "Female"
popup/item_0/id = 0
popup/item_1/text = "Male"
popup/item_1/id = 1
script = ExtResource("4_nmfku")

[node name="BreakLine3" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/BreakLine3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_vr50r")

[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Back to Main Menu" to="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Back to Main Menu" method="_on_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls/Heading/Reset to Default" to="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls" method="_on_reset_to_default_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders/Heading/Reset to Default" to="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VolumeSliders" method="_on_reset_to_default_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles/ToggleRow/MarginContainer/FullscreenToggle" to="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles" method="_on_fullscreen_toggle_toggled"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Toggles/OptionButton" to="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/RemapControls" method="_on_option_button_item_selected"]
